@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" standalone="yes"?>
-<addon id="plugin.video.sovietmoviesonline" name="Sovietmoviesonline" version="1.0.1" provider-name="L0RE">
+<addon id="plugin.video.sovietmoviesonline" name="Sovietmoviesonline" version="1.0.2" provider-name="L0RE">
 	<requires>
-		<import addon="xbmc.python" version="2.24.0"/>
+		<import addon="xbmc.python" version="2.25.0"/>
+		<import addon="script.module.requests" version="2.12.4"/>
 	</requires>
 	<extension point="xbmc.python.pluginsource" library="default.py">
 		<provides>video</provides>
@@ -10,9 +11,9 @@
 		<summary lang="de">Sowjetische und russische Filme mit englischen Untertiteln</summary>
 		<summary lang="en">Soviet and Russian movies with English subtitles</summary>
 		<summary lang="ru">Советские и русские фильмы с английскими субтитрами</summary>
-		<description lang="de">In den letzten drei Jahren haben wir die besten sowjetischen und russischen Filme ausgewählt, um sie unseren Zuschauern zur Verfügung zu stellen.[CR]Sie können Filme online ansehen, die eine breite Palette von sehr beliebten Bildern bis hin zu seltenen Funden umfassen.</description>
-		<description lang="en">For the last three years we have been selecting the best Soviet and Russian movies in order to make them available for our viewers.[CR]You can watch movies online that span a wide range of very popular images to rare finds.</description>
-		<description lang="ru">За последние три года мы отобрали лучшие советские и российские фильмы, чтобы сделать их доступными для наших зрителей.[CR]Вы можете смотреть фильмы онлайн, которые включают широкий спектр очень популярных изображений для редких находок.</description>
+		<description lang="de">[COLOR red]- KEINE Free-Full-Videos mehr erhältlich.[CR]- Preise für den Premiumzugang für diese Webseite unverhältnismäßig !!![CR]- Updates eingestellt.[/COLOR]</description>
+		<description lang="en">[COLOR red]- NO Free-Full-Videos available anymore.[CR]- Prices for premium access for this website disproportionate !!![CR]- Updates discontinued.[/COLOR]</description>
+		<description lang="ru">[COLOR red]- Полных бесплатных видео больше нет.[CR]- Цены на платный доступ к этому сайту непропорциональны !!![CR]- Обновления прекращены.[/COLOR]</description>
 		<disclaimer lang="de">Die von diesem Addon dargestellten Inhalte werden von den Erstellern des Addons weder gehostet oder verbreitet, noch stehen die Ersteller in irgendeiner Beziehung zu den Anbietern des Inhalts.</disclaimer>
 		<disclaimer lang="en">The author does not host or distribute any of the content displayed by this addon. The author does not have any affiliation with the content providers.</disclaimer>
 		<disclaimer lang="ru">Содержимое, отображаемое этим дополнением, не размещается и не распространяется его создателями, равно как и создатели никак не связаны с поставщиками содержимого.</disclaimer>
@@ -27,10 +28,11 @@
 			<icon>icon.png</icon>
 			<fanart>fanart.jpg</fanart>
 		</assets>
-		<news>[B][COLOR orangered]Version 1.0.1  (23.02.2019)[/COLOR][/B] by realvito[CR]
-- fixed: Listing of the Categories-Subfolders
-- added: Categories = All-Movies, Movies by Decades and Movies by Directors
-- added: Switch complete Addon-Language between "EN" and "RU"
+		<broken>
+- KEINE Free-Full-Videos mehr erhältlich.[CR]- Preise für den Premiumzugang für diese Webseite unverhältnismäßig !!![CR]- Updates eingestellt.
+		</broken>
+		<news>[B][COLOR orangered]Version 1.0.2  (25.12.2019)[/COLOR][/B] by realvito[CR]
+- KEINE Free-Full-Videos mehr erhältlich.[CR]- Preise für den Premiumzugang für diese Webseite unverhältnismäßig !!![CR]- Updates eingestellt.
 		</news>
 	</extension>
 </addon>
