@@ -1,10 +1,15 @@
 ﻿0.1 
 - Initial Source by @L0RE
-[B]Version 0.7.11  (19.12.2017)[/B] by L0RE[CR]
+[B]Version 0.7.11  (19.12.2017)[/B] by L0RE
 - Last release @L0RE
 ...
 
-[B]Version 1.0.1  (23.02.2019)[/B] by realvito[CR]
+[B]Version 1.0.1  (23.02.2019)[/B] by realvito
 - fixed: Listing of the Categories-Subfolders
 - added: Categories = All-Movies, Movies by Decades and Movies by Directors
 - added: Switch complete Addon-Language between "EN" and "RU"
+
+[B]Version 1.0.2  (25.12.2019)[/B] by realvito
+- KEINE Free-Full-Videos mehr erhältlich.
+- Preise für den Premiumzugang für diese Webseite unverhältnismäßig !!!
+- Updates eingestellt.
